# xfce4-panel

./: .clang-format  .cppcheck-false-positives  .cppcheck.cfg  .cvsignore  .gcc-analyzer-false-positives  .gitignore  .gitlab-ci.yml  .gitmodules  .indent.pro  .scan-build-false-positives  AUTHORS  COPYING.LIB  COPYING_LIBS  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.in  NEWS  NOTES  Panel-desktop-handler.desktop.in.in  Panel-preferences.desktop.in.in  README  README.Kiosk  README.Plugins  README.md  README.xml  STATUS  THANKS  TODO  aclocal.m4  autoclean.sh  autogen.sh  builtins.c  builtins.h  callbacks.c  callbacks.h  central.c  central.h  config.h.in  (+71 more)
common/: Makefile.am  meson.build  panel-builder.c  panel-builder.h  panel-dbus.h  panel-debug.c  panel-debug.h  panel-private.h  panel-utils.c  panel-utils.h  panel-xfconf.c  panel-xfconf.h
common/resources/: actions-dialog.glade  clock-dialog.glade  directorymenu-dialog.glade  launcher-dialog.glade  pager-dialog.glade  panel-preferences-dialog.glade  separator-dialog.glade  showdesktop-dialog.glade  sn-dialog.glade  tasklist-dialog.glade  windowmenu-dialog.glade  xfce4-panel.gresource.xml
config/: Makefile.am  clock-14.rc  contents.xml  contents.xml.ar  contents.xml.ca  contents.xml.fr  contents.xml.hu  contents.xml.in  contents.xml.ko  contents.xml.ro  contents.xml.tr  contents.xml.uk  contents.xml.vi  contents.xml.zh_TW  launcher-10.rc  launcher-10.rc.in  launcher-7.rc  launcher-7.rc.in  launcher-8.rc  launcher-8.rc.in  launcher-9.rc  launcher-9.rc.in  panels.xml  panels.xml.in  systray-4.rc  xfce4-menu-5.rc
doc/images/: Makefile.am  Makefile.in
docs/API/: Makefile.am  libxfce4panel-decl-list.txt  libxfce4panel-decl.txt  libxfce4panel-docs.sgml  libxfce4panel-sections.txt  libxfce4panel-undocumented.txt  libxfce4panel.types
docs/API/html/: XfceArrowButton.html  XfceExternalPanelPlugin.html  XfceHVBox.html  XfceInternalPanelPlugin.html  XfceItembar.html  XfcePanelPlugin.html  XfcePanelWindow.html  ch01.html  index.html  index.sgml  libxfce4panel-Convenience-Functions.html  libxfce4panel-Standard-Enumerations.html  libxfce4panel-Writing-Plugins.html  libxfce4panel.devhelp  libxfce4panel.devhelp2
docs/API/tmpl/: libxfce4panel-macros.sgml  libxfce4panel-unused.sgml  xfce-arrow-button.sgml  xfce-hvbox.sgml  xfce-itembar.sgml  xfce-panel-convenience.sgml  xfce-panel-enums.sgml  (+5 more)
docs/reference/: Makefile.am  libxfce4panel-docs.xml  libxfce4panel-docs.xml.in  libxfce4panel-sections.txt  libxfce4panel.types  meson.build
docs/references/: Makefile.am  libxfce4panel-docs.xml  libxfce4panel-sections.txt  libxfce4panel.types
iconbox/: Makefile.am  iconbox-settings.c  iconbox-settings.h  iconbox.c  iconbox.h  xfce-iconlist.c  xfce-iconlist.h
icons/: Makefile.am  Makefile.in  addicon.xpm  close.xpm  diag_icon.xpm  digits.xbm  down.xpm  file1.xpm  handle.xpm  iconify.xpm  mail.xpm  menu_icon.xpm  meson.build  miniinfo.xpm  minipower.xpm  nomail.xpm  oldmail.xpm  schedule.xpm  trash_full.xpm  up.xpm  xfce4-panel-icon.h  xfce_icon.xpm  xfce_slogan.xpm
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/64x64/: Makefile.am
icons/96x96/: Makefile.am
icons/scalable/: Makefile.am
libs/: Makefile.am  xfce-arrow-button.c  xfce-arrow-button.h  xfce-enum-types.c  xfce-enum-types.h  xfce-item.c  xfce-item.h  xfce-itembar.c  xfce-itembar.h  xfce-marshal.c  xfce-marshal.h  xfce-marshal.list  xfce-paint-private.c  xfce-paint-private.h  xfce-panel-window.c  xfce-panel-window.h  xfce-separator-item.c  xfce-separator-item.h
libxfce4panel/: .clang-format  Makefile.am  abicheck.sh  libxfce4panel-1.0.pc.in  libxfce4panel-2.0.deps  libxfce4panel-2.0.metadata  libxfce4panel-2.0.pc.in  libxfce4panel-2.pc.in  libxfce4panel-config.c  libxfce4panel-config.h.in  libxfce4panel-deprecated.h  libxfce4panel-enums.h  libxfce4panel-marshal.list  libxfce4panel.h  libxfce4panel.h.in  libxfce4panel.symbols  make-libxfce4panel-alias.pl  meson.build  xfce-arrow-button.c  xfce-arrow-button.h  xfce-blink-button.c  xfce-blink-button.h  xfce-hvbox.c  xfce-hvbox.h  xfce-itembar.c  xfce-itembar.h  xfce-marshal.list  xfce-panel-button.c  xfce-panel-button.h  xfce-panel-convenience.c  xfce-panel-convenience.h  xfce-panel-enums.h  xfce-panel-external-item.c  xfce-panel-external-item.h  xfce-panel-external-plugin.c  xfce-panel-external-plugin.h  xfce-panel-image.c  xfce-panel-image.h  xfce-panel-internal-plugin.c  xfce-panel-internal-plugin.h  (+24 more)
m4/: X11.m4  (+1 more)
mcs-plugin/: Makefile.am  plugin.c  xfce4-panel-manager.desktop.in
migrate/: Makefile.am  default.xml  default.xml.in  main.c  meson.build  migrate-46.c  migrate-46.h  migrate-config.c  migrate-config.h  migrate-default.c  migrate-default.h  migrate_46.c  migrate_46.h
panel/: Makefile.am  Makefile.in  add-control-dialog.c  add-control-dialog.h  builtins.c  builtins.h  callbacks.c  callbacks.h  central.c  central.h  controls.c  controls.h  controls_dialog.c  controls_dialog.h  create-def-file.sh  dialogs.c  dialogs.h  dnd.h  frap-icon-entry.c  frap-icon-entry.h  global.h  groups.c  groups.h  handle.c  handle.h  iconbutton.c  iconbutton.h  icons.c  icons.h  info.c  info.h  item-control.c  item-control.h  item.c  item.h  item_dialog.c  item_dialog.h  main.c  main.h  mcs_client.c  (+98 more)
protocols/: Makefile.am
settings/: .cvsignore  Makefile.am  Makefile.in  iconbox_plugin.c  xfce-iconbox-settings.desktop  xfce-iconbox-settings.desktop.in  xfce-panel-settings.desktop  xfce-panel-settings.desktop.in  xfce-taskbar-settings.desktop  xfce-taskbar-settings.desktop.in  xfce4-panel-manager.desktop.in  xfce_settings.h  xfce_settings_dialog.c  xfce_settings_dialog.h  xfce_settings_plugin.c  xfce_settings_plugin.h  xftaskbar_plugin.c
taskbar/: Makefile.am  xftaskbar.c
wrapper/: Makefile.am  main.c  meson.build  wrapper-external-infos.xml  wrapper-module.c  wrapper-module.h  wrapper-plug-wayland.c  wrapper-plug-wayland.h  wrapper-plug-x11.c  wrapper-plug-x11.h  wrapper-plug.c  wrapper-plug.h
(+614 files in other folders)
