@SET_MAKE@

confdir = $(sysconfdir)/xdg/xfce4/panel
conf_DATA = 								\
	contents.xml							\
	contents.xml.ar							\
	contents.xml.az							\
	contents.xml.ca							\
	contents.xml.eu							\
	contents.xml.fr							\
	contents.xml.he							\
	contents.xml.hu							\
	contents.xml.it							\
	contents.xml.ko							\
	contents.xml.ms							\
	contents.xml.nl							\
	contents.xml.ro							\
	contents.xml.ru							\
	contents.xml.sk							\
	contents.xml.tr							\
	contents.xml.uk							\
	contents.xml.vi							\
	contents.xml.zh_TW

EXTRA_DIST=$(conf_DATA)
