hicolor48dir = $(datadir)/icons/hicolor/48x48/apps

hicolor16dir = $(datadir)/icons/hicolor/16x16/apps

hicolor48_DATA = \
	xfce4-panel.png \
	xfce4-iconbox.png \
	xfce4-taskbar.png \
	xfce-mouse.png \
	xfce-edit.png \
	xfce-filemanager.png \
	xfce-games.png \
	xfce-graphics.png \
	xfce-internet.png \
	xfce-mail.png \
	xfce-man.png \
	xfce-multimedia.png \
	xfce-printer.png \
	xfce-schedule.png \
	xfce-sound.png \
	xfce-terminal.png \
	xfce-unknown.png \
	xfce-utils.png

hicolor16_DATA = \
	xfce-system-exit.png \
	xfce-system-info.png \
	xfce-system-lock.png \
	xfce-system-settings.png

EXTRA_DIST = $(hicolor48_DATA) $(hicolor16_DATA)

